--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "express": "^4.21.1"
-  },
   "dependencies": {
+    "express": "^4.21.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
